# mlx_perception_models

./: .gitignore  README.md  convert.py  main.py  plm.py  pyproject.toml  run_plm.py
apps/pe/docs/: pe_demo.ipynb
apps/plm/: generate.py  generate_reg.py  tokenizer.py  transformer.py
apps/plm/notebook_demos/: image_grounding.ipynb
core/: checkpoint.py  tokenizer.py  transformer.py  transforms.py  utils.py
core/data/: conversation.py
core/transforms/: image_transform.py
core/vision_encoder/: config.py  model_misc.py  pe.py  rope.py  tokenizer.py
core/vision_projector/: base.py  mlp.py
